--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
   <title>Memory Game</title>
 </head>
 <body>
-  <h3>Score: <span id="result"></span></h3>
+  <div class="container">
+    <div class="heading">
+      <h1>Memory Game!</h1>
+      <p>You need to match pairs by turn over 2 cards at a time.</p>
+      <h2>Score: <span id="result"></span></h2>
+    </div>
+    <div class="grid">
 
-  <div class="grid">
-
+    </div>
+    <div class="footer">
+      <p>Copyright &copy; 2020 Atanas Vihrogonov</p>
+    </div>
   </div>
-
   </body>
 </html>
